# pc1-pareja05

./: .gitignore  CMakeLists.txt  README.md  actividad1_semana1.md  gmon.out  linkVideo.md
bench/: benchmark.cpp
include/: list_interface.h  mini_bench.h  vector_adapter.h
internal_tests/: edge_cases.cpp  test_internal.cpp
public_tests/: test_public.cpp
reports/: coverage_report.md  optimization_report.md  profiling_report.md
src/: main.cpp  solution.cpp  solution.hpp
